Fixed position of the dropdown menu on mobile version

--- a/src/layouts/header/_header.scss
+++ b/src/layouts/header/_header.scss
@@ -159,7 +159,8 @@
 		padding: 15px 0;
 		@media (max-width: map.get(v.$max-width-media-queries, "mobile")) {
 			border: none;
-			flex-direction: column;
+            flex-direction: column;
+            padding: 0;
 		}
 		li {
 			height: 50px;
@@ -337,7 +338,8 @@
 					margin-right: 0.5rem;
 				}
 				@media (max-width: map.get(v.$max-width-media-queries, "mobile")) {
-					grid-row: none;
+                    grid-row: none;
+                    grid-template-rows: none;
 				}
 			}
 			a {
@@ -347,6 +349,7 @@
 			@media (max-width: map.get(v.$max-width-media-queries, "mobile")) {
 				grid-template-areas: "logo";
 				grid-template-columns: none;
+				margin: 0;
 			}
 		}
 		@include superior-menu();
